# wasmtime-host-component-hello-world

./: .gitignore  README.md  flake.nix
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml
host/src/: host_impl.rs  lib.rs  main.rs
wit/: capitalize.wit
